# rust-redis-ws-chat

./: README.md  docker-compose.yml
client/: Dockerfile  fly.toml  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/app/room/[id]/: page.tsx
client/src/lib/: utils.ts
server/: .env  Cargo.toml  Dockerfile  fly.toml
server/src/: handlers.rs  main.rs  state.rs
