[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
socketioxide = { version = "0.16.1", features = ["state"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
